After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679190 - Can't pair with a nokia N9 (Using SSP pairing)
Can't pair with a nokia N9 (Using SSP pairing)
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: wizard
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2012-06-30 12:43 UTC by Sjoerd Simons
Modified: 2012-07-02 10:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch[0] (1.24 KB, patch)
2012-06-30 12:43 UTC, Sjoerd Simons
committed Details | Review
Fix getting stuk in the finish page (1.83 KB, patch)
2012-06-30 12:44 UTC, Sjoerd Simons
none Details | Review
Fix getting stuk in the finish page (1.14 KB, patch)
2012-07-01 10:32 UTC, Sjoerd Simons
committed Details | Review

Description Sjoerd Simons 2012-06-30 12:43:55 UTC
Created attachment 217698 [details] [review]
Proposed patch[0]

See subject, patches attached
Comment 1 Sjoerd Simons 2012-06-30 12:44:53 UTC
Created attachment 217699 [details] [review]
Fix getting stuk in the finish page
Comment 2 Sjoerd Simons 2012-07-01 10:32:35 UTC
Created attachment 217761 [details] [review]
Fix getting stuk in the finish page

Previous patch had some debugging printfs left
Comment 3 Bastien Nocera 2012-07-02 10:18:15 UTC
Fixed the commit messages to be user-focused, instead of developer-focused.
Thanks for the patches.